3 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="container">
+<app-file-upload></app-file-upload>
+
+<!-- <div class="container">
   <div id="comparison">
     <figure>
       <div id="handle" #handle></div>
@@ -6,6 +8,6 @@
     </figure>
     <input type="range" [(ngModel)]="sliderRange" min="0" max="100" value="50" id="slider" #slider (ngModelChange)="moveDivisor($event)">
 
-    <!--  (ngModelChange)="moveDivisor()" -->
   </div>
- </div>
+ </div> -->
+<!--  (ngModelChange)="moveDivisor()" -->
