--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -1,16 +1,31 @@
+<!-- <div *ngIf="currentFile" class="progress">
+  <div
+    class="progress-bar progress-bar-info progress-bar-striped"
+    role="progressbar"
+    attr.aria-valuenow="{{ progress }}"
+    aria-valuemin="0"
+    aria-valuemax="100"
+    [ngStyle]="{ width: progress + '%' }"
+  >
+    {{ progress }}%
+  </div>
+</div> -->
+
+
 <div class="container py-3">
-  <div class="input-group mb-3">
+  <!-- <div class="input-group mb-3">
     <div class="input-group-prepend">
       <span class="input-group-text">Before Image</span>
     </div>
     <div class="custom-file">
-      <input type="file" class="custom-file-input" id="before" name="before" #beforePic >
+      <input type="file" class="custom-file-input" id="before" name="before" (change)="selectFile($event)">
       <label class="custom-file-label" for="before">Choose file</label>
     </div>
-  </div>
-<!-- [(ngModel)]="beforePic" [(ngModel)]="afterPic" -->
+  </div> -->
 
-  <div class="input-group mb-3">
+  <!-- [(ngModel)]="beforePic" [(ngModel)]="afterPic" -->
+
+  <!-- <div class="input-group mb-3">
     <div class="input-group-prepend">
       <span class="input-group-text">After Image</span>
     </div>
@@ -18,9 +33,15 @@
       <input type="file" class="custom-file-input" id="after" name="after" #afterPic>
       <label class="custom-file-label" for="after">Choose file</label>
     </div>
-  </div>
+  </div> -->
 
 </div>
+
+<!-- <div class="alert alert-light" role="alert">{{ message }}</div>
+
+<button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">
+  Upload
+</button> -->
 
 
 <!-- <form name="save" (submit)="submitForm()" #saveForm="ngForm">
