--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -11,13 +11,13 @@
       <span class="input-group-text">Before</span>
     </div>
     <div class="custom-file">
-      <input #file class="custom-file-input" type="file" id="before" name="before" (change)="selectBeforeFile($event)"/>
+      <input  class="custom-file-input" type="file"  id="before" name="before" (change)="selectBeforeFile($event)"/>
       <label class="custom-file-label" for="before">Choose Before Image</label>
     </div>
   </div>
 
   <!-- [(ngModel)]="beforePic" [(ngModel)]="afterPic" -->
-
+  
   <div class="input-group mb-3">
     <div class="input-group-prepend">
       <span class="input-group-text">After</span>
